<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/my_location"
        android:icon="@drawable/ic_my_location_white_vector_wrapper"
        android:title="@string/my_location"
        app:showAsAction="always" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_black_24px"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/distance"
                android:title="@string/menu_distance" />

            <item
                android:id="@+id/price"
                android:title="@string/menu_price" />

            <item
                android:id="@+id/time"
                android:title="@string/menu_time" />
        </menu>
    </item>

    <item
        android:id="@+id/feedback"
        android:title="@string/menu_feedback" />

    <item
        android:id="@+id/login_logout"
        android:title="@string/menu_item_login" />
</menu>