<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/add_toilet_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/address">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatImageButton xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/my_location"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_my_location_black_24px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="left"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/isFullDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/is_full_day" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="@string/start_time">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                android:inputType="time"
                android:minWidth="64dp"
                android:text="-"
                tools:text="9:00" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/end_time">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                android:inputType="time"
                android:minWidth="64dp"
                android:text="-"
                tools:text="9:00" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="Price" />

            <Spinner
                android:id="@+id/prices"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:dropDownWidth="48dp"
                android:entries="@array/prices"
                android:gravity="center"
                android:padding="8dp"
                android:scrollbars="none"
                android:spinnerMode="dropdown" />

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/organization">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/organization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="64dp"
            android:text="@string/just_toilet"
            tools:text="OOO Ivan i KO" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_toilet"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_toilet" />
</LinearLayout>